# lib/api-spec/openapi.yaml
@@ -452,7 +452,7 @@ components:
 
     DocumentType:
       type: string
-      enum: [facture, devis, bon_livraison]
+      enum: [facture, devis, bon_livraison, facture_proforma, avoir]
 
     DocumentStatus:
       type: string
@@ -735,6 +735,8 @@ components:
           format: float
         applyTva:
           type: boolean
+        tvaPourMemoire:
+          type: boolean
         relatedDocumentId:
           type: integer
           nullable: true
@@ -742,7 +744,7 @@ components:
           type: string
           format: date-time
       required:
-        [id, type, numero, status, date, clientId, client, lines, totalHt, totalRemise, totalTva, totalTtc, applyTva, createdAt]
+        [id, type, numero, status, date, clientId, client, lines, totalHt, totalRemise, totalTva, totalTtc, applyTva, tvaPourMemoire, createdAt]
 
     DocumentSummary:
       type: object
@@ -798,6 +800,8 @@ components:
           type: string
           nullable: true
         applyTva:
+          type: boolean
+        tvaPourMemoire:
           type: boolean
         status:
           $ref: "#/components/schemas/DocumentStatus"
